# ProjectSCARS

./: .editorconfig  .firebaserc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  centralserver.session.sql  codecov.yml  compose.yaml  firebase.json  package-lock.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: central-server-tests.yml  codecov.yml  frontend.yml  lint-tests.yml  lint.yml  (+6 more)
CentralServer/: .config.dev.json  .config.example.json  .config.prod.example.json  .dockerignore  .gitignore  .pytest.env  Dockerfile  README.md  config.json  config.pytest.json  package-lock.json  pyproject.toml  requirements.txt
CentralServer/centralserver/: __init__.py  __main__.py  info.py  main.py
CentralServer/centralserver/internals/: attachment_handler.py  auth_handler.py  config_handler.py  db_handler.py  exceptions.py  logger.py  mail_handler.py  models.py  notification_handler.py  permissions.py  school_handler.py  templater.py  user_handler.py
CentralServer/centralserver/internals/adapters/: config.py  database.py  oauth.py  object_store.py
CentralServer/centralserver/internals/ai/: auth.py  chatbot.py  config.py  core.py  gemini_config.py  intents.py  routers.py  typo.py  utils.py
CentralServer/centralserver/internals/models/: __init__.py  notification.py  oauth.py  object_store.py  reports.py  role.py  school.py  school_models.py  settings.py  token.py  user.py  user_models.py
CentralServer/centralserver/internals/models/reports/: __init__.py  attachments.py  daily_financial_report.py  disbursement_voucher.py  lr_administrative_expenses.py  lr_clinic_fund.py  lr_faculty_stud_dev_fund.py  lr_he_fund.py  lr_operating_expenses.py  lr_revolving_fund.py  lr_school_operation_fund.py  lr_supplementary_feeding_fund.py  monthly_report.py  payroll_report.py  report_status.py  report_status_manager.py  status_change_request.py
CentralServer/centralserver/routers/: ai_routes.py  auth_routes.py  misc_routes.py  notification_routes.py  reports_routes.py  schools_routes.py  users_routes.py
CentralServer/centralserver/routers/auth_routes/: __init__.py  email.py  multifactor.py  oauth.py
CentralServer/centralserver/routers/reports_routes/: __init__.py  attachments.py  daily.py  liquidation.py  monthly.py  payroll.py
CentralServer/data/: .gitignore
CentralServer/db/: .env.example  compose.yaml
CentralServer/scripts/: clean.py  populate.py  secret.py
CentralServer/system/garage/: .env.example  .gitignore  compose.yaml  garage.example.toml  garage.toml
CentralServer/system/glitchtip/: .env.example  compose.yaml
CentralServer/system/minio/: .env.example  compose.yaml
CentralServer/system/mysql/: .env.example  compose.yaml
CentralServer/system/postgresql/: .env.example  compose.yaml
CentralServer/templates/mail/: base.html  email_verification.html  email_verification.txt  invite.html  invite.txt  mfa_otp_disabled.html  mfa_otp_disabled.txt  mfa_otp_enabled.html  mfa_otp_enabled.txt  password_recovery.html  password_recovery.txt  unusual_login.html  unusual_login.txt
CentralServer/tests/: test_adapters_database.py  test_adapters_database_config.py  test_adapters_object_store.py  test_app.py  test_confighandler.py  test_db_handler.py  test_user_management.py  test_user_school_management.py
LocalServer/: .config.example.json  .gitignore  .pytest.env  README.md  config.pytest.json  pyproject.toml  requirements.txt
LocalServer/localserver/: __init__.py  __main__.py  info.py  main.py
LocalServer/localserver/internals/: auth_handler.py  config_handler.py  db_handler.py  logger.py  models.py  permissions.py  user_handler.py
LocalServer/localserver/routers/: auth_routes.py  users_routes.py
LocalServer/tests/: test_app.py  test_confighandler.py  test_db_handler.py  test_user_management.py
WebClient/: .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  postcss.config.mjs  vite.config.js  vitest.setup.mjs  wrangler.json
docs/: central-server-database-setup.md  central-server-development-setup.md  central-server-enabling-open-authentication.md  central-server-environment-variables.md  central-server-object-store-setup.md  central-server-smtp-connection.md  central-server.md  deployment.md  development.md  web-client-development-setup.md  web-client.md
firebase/: firestore.indexes.json
functions/: main.py  models.py  rules.py  utils.py
intransit/: .gitignore  package-lock.json  package.json
scars_server/: .gitignore  README.md  pyproject.toml  requirements.txt
scars_server/src/scars_server/: __init__.py
scars_server/src/scars_server/core/: __init__.py  db_handler.py
scars_server/src/scars_server/models/: canteen.py  daily_report.py
scars_server/src/tests/: test_server.py
(+220 files in other folders)
