[project]
name = "centralserver"
version = "0.1.0"
description = "The central server for the project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.3.5"]
