[project]
name = "scars-server"
version = "0.1.0"
description = "Project SCARS Central Server"
readme = "README.md"
authors = [{ name = "Chris1320", email = "chris1320is@protonmail.com" }]
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.115.6"]

[project.scripts]
scars-server = "scars_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cache-clear --color=yes --code-highlight=yes --cov=scars_server -vvv"
testpaths = ["src/tests"]
pythonpath = ["."]

[dependency-groups]
dev = ["pylint>=3.3.2", "pytest-cov>=6.0.0", "pytest>=8.3.4", "pytest-benchmark>=5.1.0"]
